welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if (weekday == true && vacation == false) {
        ^